--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "export": "npm run now-build && next export"
   },
   "dependencies": {
+    "@mxck/mdx.macro": "^0.2.8",
     "@types/ms": "^0.7.31",
     "@types/styled-jsx": "^2.2.8",
     "@zeit-ui/react": "^1.5.0",
