--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "ms": "^2.1.2",
     "next": "^9.4.0",
     "react": "16.13.0",
-    "react-dom": "16.13.0"
+    "react-dom": "16.13.0",
+    "react-twitter-embed": "^3.0.3",
+    "react-youtube": "^7.11.2"
   },
   "devDependencies": {
     "@mapbox/rehype-prism": "^0.4.0",
-    "@mdx-js/loader": "^1.5.7",
+    "@mdx-js/loader": "^1.6.4",
     "@next/mdx": "^9.4.4",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
