fix warning log

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@mxck/mdx.macro": "^0.2.8",
     "@types/ms": "^0.7.31",
     "@types/styled-jsx": "^2.2.8",
+    "@types/youtube": "0.0.38",
     "@zeit-ui/react": "^1.5.0",
     "@zeit-ui/react-icons": "^1.2.2",
     "@zeit-ui/react-prism": "^1.0.1",
+    "enzyme": "^3.0.0",
     "ms": "^2.1.2",
-    "next": "^9.4.0",
-    "react": "16.13.0",
+    "next": "^9.4.4",
+    "nextjs-sitemap-generator": "^1.0.0",
+    "prop-types": "^15.5.4",
+    "react": "^16.13.1",
     "react-dom": "16.13.0",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.11.2"
@@ -32,7 +36,7 @@
     "@types/react-dom": "^16.9.5",
     "chalk": "^3.0.0",
     "extract-mdx-metadata": "^1.0.0",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.0",
     "prompt-sync": "^4.2.0",
     "rehype-join-line": "^1.0.2",
     "styled-jsx": "^3.2.4",
