--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # next.js
 /.next/
 /out/
+/.next
 
 # production
 /build
@@ -24,12 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# deploy
 .now
-
-/.next
-
-/lib/data/
-
+now.json
 .vercel
+vercel.json
 
 sitemap.xml
