--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "npm run collect && next dev",
     "dev": "npm run collect && next dev",
-    "now-build": "npm run collect && next build",
+    "now-build": "npm run collect && next build && node scripts/generate-ogp.js",
     "post": "node scripts/create.js",
     "collect": "node scripts/collect-meta.js",
     "export": "npm run now-build && next export",
