--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "chalk": "^3.0.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "extract-mdx-metadata": "^1.0.0",
     "fs-extra": "^9.0.0",
+    "prettier": "^2.0.5",
     "prompt-sync": "^4.2.0",
     "rehype-join-line": "^1.0.2",
     "styled-jsx": "^3.2.4",
