--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,31 @@
-{
-  "extends": [
-    "plugin:prettier/recommended",
-    "prettier/react",
-    "prettier/standard"
+module.exports = {
+  extends: [
+    'plugin:prettier/recommended',
+    'prettier/react',
+    'prettier/standard',
   ],
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 2020,
-    "ecmaFeatures": {
-      "jsx": true
-    }
+  parserOptions: {
+    sourceType: 'module',
+    ecmaVersion: 2020,
+    ecmaFeatures: {
+      jsx: true,
+    },
   },
-  "env": {
-    "es6": true,
-    "node": true
-  }
+  env: {
+    browser: true,
+    node: true,
+    es6: true,
+  },
+  root: true,
+  rules: {
+    'func-style': ['error', 'expression', { allowArrowFunctions: true }],
+    'newline-before-return': 'error',
+    'no-dupe-class-members': 'error',
+    'no-var': 'error',
+    'object-shorthand': ['error', 'always'],
+    'prefer-arrow-callback': 'error',
+    'prefer-const': 'error',
+    'prefer-spread': 'error',
+    'eol-last': ['error', 'always'],
+  },
 }
