--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-	"name": "dev",
-	"private": true,
-	"license": "MIT",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/mdx": "^0.18.0",
-		"@astrojs/rss": "^2.1.1",
-		"@astrojs/sitemap": "^1.1.0",
-		"@astrojs/tailwind": "^3.0.1",
-		"@astrojs/vercel": "^3.2.0",
-		"@fontsource/fira-code": "^4.5.13",
-		"@fontsource/inter": "^4.5.15",
-		"@tailwindcss/typography": "^0.5.9",
-		"astro": "^2.1.0",
-		"tailwindcss": "^3.2.7"
-	},
-	"devDependencies": {
-		"@typescript-eslint/parser": "^5.54.0",
-		"eslint": "^8.35.0",
-		"eslint-plugin-astro": "^0.24.0",
-		"prettier": "^2.8.4",
-		"prettier-plugin-astro": "^0.8.0",
-		"vite": "^4.1.4"
-	}
+  "name": "dev",
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && tsc --noEmit && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/mdx": "^0.18.0",
+    "@astrojs/react": "^2.1.0",
+    "@astrojs/rss": "^2.1.1",
+    "@astrojs/sitemap": "^1.1.0",
+    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/vercel": "^3.2.0",
+    "@fontsource/fira-code": "^4.5.13",
+    "@fontsource/inter": "^4.5.15",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.1.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "@astrojs/partytown": "^1.1.0",
+    "@types/gtag.js": "^0.0.12",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-plugin-astro": "^0.24.0",
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0",
+    "vite": "^4.1.4"
+  }
 }
