--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.0",
-    "@astrojs/react": "^2.1.0",
     "@astrojs/rss": "^2.1.1",
     "@astrojs/sitemap": "^1.1.0",
     "@astrojs/tailwind": "^3.0.1",
@@ -19,16 +18,11 @@
     "@fontsource/fira-code": "^4.5.13",
     "@fontsource/inter": "^4.5.15",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^2.1.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@vercel/analytics": "^0.1.11",
+    "astro": "^2.1.3",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@astrojs/partytown": "^1.1.0",
-    "@types/gtag.js": "^0.0.12",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
     "eslint-plugin-astro": "^0.24.0",
