--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro check && tsc --noEmit && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "lint": "eslint ./src",
+    "lint:debug": "eslint ./src --debug",
+    "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.0",
@@ -23,7 +25,8 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.35.0",
     "eslint-plugin-astro": "^0.24.0",
     "prettier": "^2.8.4",
