--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && tsc --noEmit && astro build",
-    "preview": "astro preview",
     "lint": "eslint ./src",
     "lint:debug": "eslint ./src --debug",
-    "lint:fix": "eslint ./src --fix"
+    "lint:fix": "eslint ./src --fix",
+    "lint:check": "astro check && yarn lint:fix && tsc --noEmit",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "yarn lint:check && astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.0",
@@ -29,6 +30,7 @@
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.35.0",
     "eslint-plugin-astro": "^0.24.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
     "vite": "^4.1.4"
