--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint:debug": "eslint ./src --debug",
     "lint:fix": "eslint ./src --fix",
     "lint:check": "astro check && yarn lint:fix && tsc --noEmit",
+    "create:post": "ruby src/scripts/create_post.rb",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "yarn lint:check && astro build",
