--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint ./src --fix",
     "lint:check": "astro check && yarn lint:fix && tsc --noEmit",
     "create:post": "ruby src/scripts/create_post.rb",
+    "html:lint": "markuplint \"src/**/*.astro\"",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "yarn lint:check && astro build",
@@ -27,11 +28,13 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@markuplint/astro-parser": "^3.4.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.35.0",
     "eslint-plugin-astro": "^0.24.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
+    "markuplint": "^3.4.0",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
     "vite": "^4.1.4"
