--- a/package.json
+++ b/package.json
@@ -17,29 +17,31 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.1",
-    "@astrojs/rss": "^2.4.1",
-    "@astrojs/sitemap": "^1.3.0",
-    "@astrojs/tailwind": "^3.1.1",
-    "@astrojs/vercel": "^3.2.5",
+    "@astrojs/mdx": "^0.19.4",
+    "@astrojs/rss": "^2.4.3",
+    "@astrojs/sitemap": "^1.3.1",
+    "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.4.0",
     "@fontsource/fira-code": "^4.5.13",
     "@fontsource/inter": "^4.5.15",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.1",
-    "astro": "^2.4.2",
+    "astro": "^2.5.5",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@markuplint/astro-parser": "^3.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
-    "eslint-plugin-astro": "^0.26.1",
-    "eslint-plugin-tailwindcss": "^3.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-plugin-astro": "^0.26.2",
+    "eslint-plugin-tailwindcss": "^3.12.0",
     "markuplint": "^3.10.0",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.9.1",
+    "prettier-plugin-tailwind": "^2.2.12",
+    "tailwind": "^4.0.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5"
+    "vite": "^4.3.9"
   }
 }
