chore: Add configuration for linter and formatter and Exec pnpm format

--- a/next-contentlayer/.eslintrc.json
+++ b/next-contentlayer/.eslintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:tailwindcss/recommended",
+    "prettier"
+  ],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser"
+    }
+  ],
+  "ignorePatterns": ["!.prettierrc.js"]
 }
