--- a/next-contentlayer/package.json
+++ b/next-contentlayer/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-pretty-code": "^0.9.6",
+    "remark-gfm": "^3.0.1",
     "shiki": "^0.14.2"
   },
   "devDependencies": {
