--- a/next-contentlayer/package.json
+++ b/next-contentlayer/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,ts,tsx,json}'",
-    "markuplint": "markuplint './**/*.tsx'"
+    "markuplint": "markuplint './**/*.tsx'",
+    "create:post": "ruby app/scripts/create_post.rb"
   },
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
