--- a/next-contentlayer/package.json
+++ b/next-contentlayer/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "rehype-pretty-code": "^0.9.8",
     "remark-gfm": "^3.0.1",
+    "rss": "^1.2.2",
     "shiki": "^0.14.2"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/rss": "^0.0.30",
     "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
