--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-pretty-code": "^0.9.9",
-    "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
     "shiki": "^0.14.3"
   },
@@ -46,6 +44,11 @@
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^2.1.0",
+    "rehype-pretty-code": "^0.9.9",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
