--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
+    "tocbot": "^4.21.1",
     "typescript": "5.1.6"
   }
 }
