chore: pnpm create playwright を実行

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .contentlayer
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
