--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,7 +2,11 @@ name: Linter
 on: [pull_request]
 jobs:
   eslint:
+    name: runner / eslint
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-eslint@v1
