chore: 環境変数の更新

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_SITE_URL=https://reona.dev
 NEXT_PUBLIC_SITE_TITLE=reona.dev
-NEXT_PUBLIC_SITE_DESCRIPTION="reona.dev は Next.js + Vercel によって作成されています。プログラミングに関する学びや日々の出来事を発信するウェブサイトです。"
+NEXT_PUBLIC_SITE_DESCRIPTION="reona.dev は Next.js + Cloudflare Pages によって作成されています。Reona Shimada の技術的な学びや日々の出来事を発信する Web サイトです。"
 NEXT_PUBLIC_SITE_LANGUAGE=ja
